test/instance-checks-3.ktn
def example (a -> Int): ->x x
